fixed name overflow

--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -13,6 +13,7 @@
 
 .name
     text-align: center
+    overflow: hidden
 
 .firstname
     font-family: libre baskerville
